# game_config_edit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  package.json
.github/workflows/: ci.yml  release.yml
docs/: performance.md  releasing.md  requirements.md
npm/game-config-edit/: README.md  package.json
npm/game-config-edit-darwin-arm64/: README.md  package.json
npm/game-config-edit-win32-x64/: README.md  package.json
npm/game-config-edit/lib/: platform.js
npm/game-config-edit/test/: platform.test.js
packaging/macos/: Info.plist
packaging/windows/: manifest.rc
scripts/: set-release-version.mjs  set-release-version.test.mjs  validate-release-packages.mjs
src/: app.css  csv_document.rs  diagnostics.rs  document_session.rs  editor_navigation.rs  file_monitor.rs  i18n.rs  lib.rs  main.rs  platform.rs  search.rs  settings.rs  startup.rs  table_virtualization.rs  workspace.rs
tests/: dataset_regression.rs  performance_baseline.rs
tests/fixtures/workspace/: heroes.csv
tests/fixtures/workspace/nested/: items.csv
